{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 184,
  "lineage": "efec49db-4752-a5e2-bc56-3a66be362e90",
  "resources": [
    {
      "module": "module.jenkins-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe0238291c8e3f07",
            "arn": "arn:aws:ec2:us-east-1:481792101255:instance/i-0c1fe773f971d3858",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c1fe773f971d3858",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "dev-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-006d8496adb6d48fe",
            "private_dns": "ip-192-168-0-31.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.31",
            "public_dns": "ec2-44-201-103-62.compute-1.amazonaws.com",
            "public_ip": "44.201.103.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-008c8274c0ed61daf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0126ba2345742aa03",
              "sg-085da12af7d9c4209"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09918c58d6cfd3b49",
            "tags": {
              "Name": "dev-Jenkins-Server-devOps"
            },
            "tags_all": {
              "Name": "dev-Jenkins-Server-devOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0126ba2345742aa03",
              "sg-085da12af7d9c4209"
            ]
          },
          "dependencies": [
            "module.jenkins-server.data.aws_ami.ubuntu-linux-1404",
            "module.jenkins-server.data.template_file.user_data",
            "module.security.aws_security_group.security_group_port_22",
            "module.security.aws_security_group.security_group_port_8080",
            "module.vpc.aws_subnet.public_subnet_az",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.k8-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe0238291c8e3f07",
            "arn": "arn:aws:ec2:us-east-1:481792101255:instance/i-04f80d8b400a8670d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f80d8b400a8670d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "dev-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08f1c2f0481602edd",
            "private_dns": "ip-192-168-0-212.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.212",
            "public_dns": "ec2-54-196-141-217.compute-1.amazonaws.com",
            "public_ip": "54.196.141.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cea64951495b7b41",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03f63fbececc0b279",
              "sg-085da12af7d9c4209"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09918c58d6cfd3b49",
            "tags": {
              "Name": "dev-k8-Server-devOps"
            },
            "tags_all": {
              "Name": "dev-k8-Server-devOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f63fbececc0b279",
              "sg-085da12af7d9c4209"
            ]
          },
          "dependencies": [
            "module.k8-server.data.aws_ami.ubuntu-linux-1404",
            "module.k8-server.data.template_file.user_data",
            "module.security.aws_security_group.security_group_port_22",
            "module.security.aws_security_group.security_group_port_30000",
            "module.vpc.aws_subnet.public_subnet_az",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_port_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481792101255:security-group/sg-085da12af7d9c4209",
            "description": "enable ssh access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085da12af7d9c4209",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "server security group",
            "name_prefix": "",
            "owner_id": "481792101255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-devOps-security_group_port_22"
            },
            "tags_all": {
              "Name": "dev-devOps-security_group_port_22"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb0b5cb23ecf2353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_port_30000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481792101255:security-group/sg-03f63fbececc0b279",
            "description": "enable port access 30000",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f63fbececc0b279",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 30000 access",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              }
            ],
            "name": "K8 server security group",
            "name_prefix": "",
            "owner_id": "481792101255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-devOps-security_group_port_30000"
            },
            "tags_all": {
              "Name": "dev-devOps-security_group_port_30000"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb0b5cb23ecf2353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_port_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481792101255:security-group/sg-0126ba2345742aa03",
            "description": "enable port access 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0126ba2345742aa03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 8080 access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Jenkins server security group with port 8080",
            "name_prefix": "",
            "owner_id": "481792101255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-devOps-security_group_port_8080"
            },
            "tags_all": {
              "Name": "dev-devOps-security_group_port_8080"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb0b5cb23ecf2353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_port_9000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481792101255:security-group/sg-05cdda25d887899b0",
            "description": "enable PORT 9000",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05cdda25d887899b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 9000 access",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "sonarqube server security group",
            "name_prefix": "",
            "owner_id": "481792101255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-devOps-security_group_port_9000"
            },
            "tags_all": {
              "Name": "dev-devOps-security_group_port_9000"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb0b5cb23ecf2353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarqube-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarqube-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe0238291c8e3f07",
            "arn": "arn:aws:ec2:us-east-1:481792101255:instance/i-0494405661733b5bf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0494405661733b5bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "dev-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fa6e881c2c6a1064",
            "private_dns": "ip-192-168-0-216.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.216",
            "public_dns": "ec2-44-203-190-104.compute-1.amazonaws.com",
            "public_ip": "44.203.190.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e29d0e0610b7712",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05cdda25d887899b0",
              "sg-085da12af7d9c4209"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09918c58d6cfd3b49",
            "tags": {
              "Name": "dev-Sonarqube-Server-devOps"
            },
            "tags_all": {
              "Name": "dev-Sonarqube-Server-devOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05cdda25d887899b0",
              "sg-085da12af7d9c4209"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.security_group_port_22",
            "module.security.aws_security_group.security_group_port_9000",
            "module.sonarqube-server.data.aws_ami.ubuntu-linux-1404",
            "module.sonarqube-server.data.template_file.user_data",
            "module.vpc.aws_subnet.public_subnet_az",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481792101255:internet-gateway/igw-0fd12e4248f74de7c",
            "id": "igw-0fd12e4248f74de7c",
            "owner_id": "481792101255",
            "tags": {
              "Name": "dev-devOps-igw"
            },
            "tags_all": {
              "Name": "dev-devOps-igw"
            },
            "vpc_id": "vpc-0eb0b5cb23ecf2353"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481792101255:route-table/rtb-0422bf3f4ccf7ff71",
            "id": "rtb-0422bf3f4ccf7ff71",
            "owner_id": "481792101255",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd12e4248f74de7c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-devOps-Public Route Table"
            },
            "tags_all": {
              "Name": "dev-devOps-Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb0b5cb23ecf2353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbbb566edd2e1719",
            "route_table_id": "rtb-0422bf3f4ccf7ff71",
            "subnet_id": "subnet-09918c58d6cfd3b49"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481792101255:subnet/subnet-09918c58d6cfd3b49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09918c58d6cfd3b49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "481792101255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-devOps-Public Subnet"
            },
            "tags_all": {
              "Name": "dev-devOps-Public Subnet"
            },
            "vpc_id": "vpc-0eb0b5cb23ecf2353"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481792101255:vpc/vpc-0eb0b5cb23ecf2353",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-00265fb404de9bae2",
            "default_route_table_id": "rtb-040c4c80628c35bf1",
            "default_security_group_id": "sg-0c3ea94ba30dc0146",
            "dhcp_options_id": "dopt-05b0956f602ec80a2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb0b5cb23ecf2353",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-040c4c80628c35bf1",
            "owner_id": "481792101255",
            "tags": {
              "Name": "dev-devOps-vpc"
            },
            "tags_all": {
              "Name": "dev-devOps-vpc"
            }
          }
        }
      ]
    }
  ]
}